css: misc styling, ui: disable next when stuck, ui: fix factorial ex

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html,body {
   font-family: sans;
 }
 
-h1,h3,h4 {
+h1,h2,h3,h4 {
   text-align: center;
   font-weight: normal;
 }
@@ -15,7 +15,7 @@ h4 {
 
 p {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 10px auto;
   line-height: 1.4em;
 }
 
@@ -23,14 +23,6 @@ ul {
   max-width: 600px;
   margin: 10px auto;
   line-height: 1.5em;
-}
-
-
-h2 {
-  font-weight: normal;
-  margin: 0;
-  padding: 5px;
-  text-transform: uppercase;
 }
 
 hr {
@@ -43,6 +35,15 @@ button {
   border: 1px solid #000;
   padding: 2px;
   background-color: #fefefe;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+code {
+  background-color: #efefef;
+  padding: 2px;
 }
 
 .CodeMirror {
@@ -68,7 +69,13 @@ button {
 
 .holder {
   margin: 0 auto;
+  margin-bottom: 100px;
   width: 800px;
+}
+
+.footer {
+  margin-top: 50px;
+  text-align: center;
 }
 
 .box {
